bug : the instruction was going out of bound in phone

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ button {
 
 .footer .img-social {
   width: 2rem;
-  margin: 0rem 2rem;
+  margin: 0rem 3%;
 }
 
 .footer .footer-content {
@@ -103,5 +103,5 @@ button {
 }
 
 .instruction {
-  margin-left: 8rem;
+  margin-left: 11%;
 }
